# GALAHAD-TemporalSlicer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
adapters/: llm_tool_adapter.cpp  llm_tool_adapter.h
anomaly/: anomaly_detector.cpp  anomaly_detector.h
bench/: main.cpp
core/: temporal_core.cpp  temporal_core.h
engine/: temporal_engine.cpp  temporal_engine.h
examples/: anthropic_demo.py  multi_agent_demo.py  traffic_agent_demo.py
examples/transcripts/: README.md  counterfactual_demo_transcript.md  multi_agent_demo_transcript.md  traffic_agent_demo_transcript.md
persistence/: persistence.cpp  persistence.h
python/: galahad.cpp  test_galahad.py
tests/: test_adapter.cpp  test_anomaly.cpp  test_engine.cpp  test_persistence.cpp  test_temporal.cpp
